<resources>
    <!--  facebook login         -->
    <string name="facebook_app_id">383616869365048</string>
    <string name="fb_login_protocol_scheme">fb383616869365048</string>

    <!--  Home Fragment strings  -->
    <string name="app_name">TMDB</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome.</string>
    <string name="tag_line">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="search">Search</string>
    <string name="multi_search">Search for a movie, tv show....</string>
    <string name="what_s_popular">What\'s Popular</string>
    <string name="streaming">Streaming</string>
    <string name="ontv">On TV</string>
    <string name="in_theaters">In Theaters</string>
    <string name="na">N/A</string>
    <string name="percentage">%</string>
    <string name="movies">Movies</string>
    <string name="tv_caps">TV</string>
    <string name="tv">tv</string>
    <string name="top_rated">Top Rated</string>
    <string name="trending">Trending</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="upcoming">Upcoming</string>

    <!--  MovieDetailsActivity strings  -->
    <string name="symbol_rupee">₹</string>
    <string name="overview">Overview</string>
    <string name="star_cast">Star Cast</string>
    <string name="reviews">Reviews</string>
    <string name="na_in_brackets">(N/A)</string>
    <string name="user_score">User\nScore</string>
    <string name="original_title">Original Title</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="release_date">Release Date</string>
    <string name="hindi">Hindi</string>
    <string name="telugu">Telugu</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="danish">Danish</string>
    <string name="french">French</string>
    <string name="korean">Korean</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="tagalog">Tagalog</string>
    <string name="cantonese">Cantonese</string>
    <string name="spanish_castilian">Spanish; Castilian</string>
    <string name="crore">crore</string>
    <string name="lakh">lakh</string>
    <string name="million">million</string>
    <string name="billion">billion</string>
    <string name="trillion">trillion</string>
    <string name="symbol_dollar">$</string>
    <string name="k">K</string>
    <string name="in">IN</string>
    <string name="urdu">Urdu</string>
    <string name="arabic">Arabic</string>
    <string name="malayalam">Malayalam</string>
    <string name="japanese">Japanese</string>
    <string name="portuguese">Portuguese</string>
    <string name="bengali">Bengali</string>
    <string name="marathi">Marathi</string>
    <string name="panjabi">Panjabi</string>
    <string name="gujarati">Gujarati</string>
    <string name="hebrew">Hebrew</string>
    <string name="running_time">Running Time</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="crew">Crew</string>
    <string name="last_item">last item</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="the_movie_database">The Movie Database</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="create_user_id">Create user ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="login_here">Login here</string>
    <string name="login">Login</string>
    <string name="user_id">User ID</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="amitabh_bachchan">Amitabh Bachchan</string>
    <string name="in_movies">in movies</string>
    <string name="in_tv_shows">in tv shows</string>
    <string name="in_people">in people</string>
    <string name="three_dots">...</string>
    <string name="movie">movie</string>
    <string name="person">person</string>
    <string name="first_air_date">First air date</string>
    <string name="episode_duration">Episode duration</string>
    <string name="network">Network</string>
    <string name="top_reviews">Top Reviews</string>
</resources>

    <!-- Moana id : 277834 -->