<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/na"
            android:textAlignment="center"
            android:textColor="@color/colorAppTheme"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/original_title"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <TextView
            android:id="@+id/original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"

            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_original_title" />

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/overview"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/original_title" />


        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_overview" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/status"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_status" />

        <TextView
            android:id="@+id/txt_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/release_date"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status" />


        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_release_date" />

        <TextView
            android:id="@+id/txt_running_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/running_time"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date" />


        <TextView
            android:id="@+id/running_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_running_time" />


        <TextView
            android:id="@+id/txt_original_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/original_language"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/running_time" />


        <TextView
            android:id="@+id/original_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_original_language" />


        <TextView
            android:id="@+id/txt_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/budget"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/original_language" />


        <TextView
            android:id="@+id/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_budget"
            app:layout_constraintTop_toBottomOf="@id/txt_budget" />

        <TextView
            android:id="@+id/txt_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/revenue"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/txt_budget"
            app:layout_constraintTop_toBottomOf="@id/budget" />


        <TextView
            android:id="@+id/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/na"
            android:textAlignment="viewStart"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_revenue"
            app:layout_constraintTop_toBottomOf="@id/txt_revenue" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>