<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/txt_top_billed_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/top_billed_cast"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_billed_cast_RecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/cast_no_more_items_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_top_billed_cast" />

        <LinearLayout
            android:id="@+id/cast_no_more_items_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/top_billed_cast_RecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_billed_cast_RecyclerView">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/cast_no_more_items_anim"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:rotation="-90"
                app:lottie_rawRes="@raw/last_item_lottie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/last_item"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txt_crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro_semi_bold"
            android:text="@string/crew"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_billed_cast_RecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/crew_RecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/crew_no_more_items_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_crew" />

        <LinearLayout
            android:id="@+id/crew_no_more_items_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/crew_RecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/crew_RecyclerView">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/crew_no_more_items_anim"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:rotation="-90"
                app:lottie_rawRes="@raw/last_item_lottie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/last_item"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>